# bakepy

./: .gitignore  README.md  mkdocs.yml  pyproject.toml  requirements.txt  setup.py
bakepy/: __init__.py  ipython.py
docs/Concepts/: recipe.md
examples/: Example Report.ipynb  Untitled.ipynb  example_report.html
examples/basics/: Example Report.ipynb  example_report.html
examples/recipes/: example_recipes_1.html  example_recipes_2.html  recipes.ipynb
examples/renderers/: renderers.ipynb
